reverse-proxy/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    bakery.volvocars.biz/cert4k8s: enabled
  name: proxy-gateway
  namespace: proxy
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - proxy-url.eu-dev.example.com
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - proxy-url.eu-dev.example.com
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: proxy-tls-secret
      mode: SIMPLE
