reverse-proxy/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: proxy-se
  namespace: proxy
spec:
  hosts:
  - original-url.weu-dev.example.com
  location: MESH_EXTERNAL
  ports:
  - name: tls
    number: 443
    protocol: TLS
  resolution: DNS
